# ProcuForge

./: .dockerignore  .env.production.example  .gitignore  .requirements.txt  Dockerfile  README.md  firestore.indexes.json  main.py  pyproject.toml  vendor_server.py
adk_vertex_model/: __init__.py
api/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
communication/: __init__.py  constants.py  payload_builder.py  schema.py
data/: vendor_sessions.db
db/: __init__.py
deployment/: __init__.py  agent_engine_app.py  config.py  deploy_buyer.py  deploy_vendor.py
docs/: a2a_communication.md  a2a_vendor_setup.md  architecture.md  authentication.md  buyer_state_management.md  buyer_vendor_communication_reference.md  cloud_run_deployment.md  deployment.md  deployment_guide.md  firestore_setup.md  production_setup_guide.md  request_status.md  vendor_state_management.md
logs/: procu-forge-buyer_deployment_metadata.json  procu-forge-vendor_deployment_metadata.json
master/: agent.py
procu_forge_buyer/: __init__.py  a2a_client.py  agent.py  callbacks.py  communication_validate.py  escalation.py  event_hooks.py  instruction_from_markdown.py  logging_config.py  pr_status.py  pr_status_transitions.py  purchase_a2a.py  schema.py  state_keys.py  temp.py
procu_forge_vendor/: __init__.py  agent.json  agent.py  callbacks.py  communication_status.py  logging_config.py  pricing.py  state_keys.py
schema/: communication.json
scripts/: backfill_rfq_index.py  deploy_cloud_run.sh  generate_auth_secrets.py  import_dev_seed_data.py  setup_cloud_run_once.sh  (+2 more)
(+335 files in other folders)
